--- a/websiteforSoftwareCompany.html
+++ b/websiteforSoftwareCompany.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Techy Software</title>
-    <link rel="stylesheet" href="../css/websiteforSoftWareCompany.css">
+    <link rel="stylesheet" href="websiteforSoftWareCompany.css">
 </head>
 <body>
    
